Update cli ref yaml for stable and edge

--- a/_data/engine-cli-edge/docker_container_prune.yaml
+++ b/_data/engine-cli-edge/docker_container_prune.yaml
@@ -5,6 +5,8 @@ usage: docker container prune [OPTIONS]
 pname: docker container
 plink: docker_container.yaml
 options:
+- option: filter
+  description: Provide filter values (e.g. 'until=<timestamp>')
 - option: force
   shorthand: f
   default_value: "false"
@@ -47,6 +49,7 @@ examples: |-
   The following removes containers created more than 5 minutes ago:
 
   ```bash
+  {% raw %}
   $ docker ps -a --format 'table {{.ID}}\t{{.Image}}\t{{.Command}}\t{{.CreatedAt}}\t{{.Status}}'
 
   CONTAINER ID        IMAGE               COMMAND             CREATED AT                      STATUS
@@ -64,11 +67,13 @@ examples: |-
 
   CONTAINER ID        IMAGE               COMMAND             CREATED AT                      STATUS
   61b9efa71024        busybox             "sh"                2017-01-04 13:23:33 -0800 PST   Exited (0) 44 seconds ago
+  {% endraw %}
   ```
 
   The following removes containers created before `2017-01-04T13:10:00`:
 
   ```bash
+  {% raw %}
   $ docker ps -a --format 'table {{.ID}}\t{{.Image}}\t{{.Command}}\t{{.CreatedAt}}\t{{.Status}}'
 
   CONTAINER ID        IMAGE               COMMAND             CREATED AT                      STATUS
@@ -86,5 +91,6 @@ examples: |-
 
   CONTAINER ID        IMAGE               COMMAND             CREATED AT                      STATUS
   53a9bc23a516        busybox             "sh"                2017-01-04 13:11:59 -0800 PST   Exited (0) 9 minutes ago
+  {% endraw %}
   ```
 
