--- a/_data/engine-cli-edge/docker_node_inspect.yaml
+++ b/_data/engine-cli-edge/docker_node_inspect.yaml
@@ -15,7 +15,7 @@ options:
   description: Format the output using the given Go template
 - option: pretty
   default_value: "false"
-  description: Print the information in a human friendly format.
+  description: Print the information in a human friendly format
 examples: |-
   ### Inspect a node
 
