--- a/_data/engine-cli-edge/docker_service_create.yaml
+++ b/_data/engine-cli-edge/docker_service_create.yaml
@@ -23,6 +23,7 @@ options:
   default_value: '[]'
   description: Set custom DNS search domains
 - option: endpoint-mode
+  default_value: vip
   description: Endpoint mode (vip or dnsrr)
 - option: env
   shorthand: e
@@ -56,7 +57,7 @@ options:
   default_value: "0.000"
   description: Limit CPUs
 - option: limit-memory
-  default_value: 0 B
+  default_value: "0"
   description: Limit Memory
 - option: log-driver
   description: Logging driver for service
@@ -76,30 +77,54 @@ options:
 - option: no-healthcheck
   default_value: "false"
   description: Disable any container-specified HEALTHCHECK
+- option: placement-pref
+  description: Add a placement preference
 - option: publish
   shorthand: p
   description: Publish a port as a node port
+- option: read-only
+  default_value: "false"
+  description: Mount the container's root filesystem as read only
 - option: replicas
   description: Number of tasks
 - option: reserve-cpu
   default_value: "0.000"
   description: Reserve CPUs
 - option: reserve-memory
-  default_value: 0 B
+  default_value: "0"
   description: Reserve Memory
 - option: restart-condition
-  description: Restart when condition is met (none, on-failure, or any)
+  description: Restart when condition is met ("none"|"on-failure"|"any")
 - option: restart-delay
   description: Delay between restart attempts (ns|us|ms|s|m|h)
 - option: restart-max-attempts
   description: Maximum number of restarts before giving up
 - option: restart-window
   description: Window used to evaluate the restart policy (ns|us|ms|s|m|h)
+- option: rollback-delay
+  default_value: 0s
+  description: Delay between task rollbacks (ns|us|ms|s|m|h) (default 0s)
+- option: rollback-failure-action
+  default_value: pause
+  description: Action on rollback failure ("pause"|"continue")
+- option: rollback-max-failure-ratio
+  default_value: "0"
+  description: Failure rate to tolerate during a rollback
+- option: rollback-monitor
+  default_value: 0s
+  description: |
+    Duration after each task rollback to monitor for failure (ns|us|ms|s|m|h) (default 0s)
+- option: rollback-parallelism
+  default_value: "1"
+  description: |
+    Maximum number of tasks rolled back simultaneously (0 to roll back all at once)
 - option: secret
   description: Specify secrets to expose to the service
 - option: stop-grace-period
   description: |
     Time to wait before force killing a container (ns|us|ms|s|m|h)
+- option: stop-signal
+  description: Signal to stop the container
 - option: tty
   shorthand: t
   default_value: "false"
@@ -109,7 +134,7 @@ options:
   description: Delay between updates (ns|us|ms|s|m|h) (default 0s)
 - option: update-failure-action
   default_value: pause
-  description: Action on update failure (pause|continue)
+  description: Action on update failure ("pause"|"continue"|"rollback")
 - option: update-max-failure-ratio
   default_value: "0"
   description: Failure rate to tolerate during an update
@@ -366,8 +391,21 @@ examples: |-
         </ul></p>
       </td>
     </tr>
+    <tr>
+      <td><b>consistency</b></td>
+      <td></td>
+      <td>
+        <p>The consistency requirements for the mount; one of
+           <ul>
+             <li><tt>default</tt>: Equivalent to <tt>consistent</tt>.</li>
+             <li><tt>consistent</tt>: Full consistency.  The container runtime and the host maintain an identical view of the mount at all times.</li>
+             <li><tt>cached</tt>: The host's view of the mount is authoritative.  There may be delays before updates made on the host are visible within a container.</li>
+             <li><tt>delegated</tt>: The container runtime's view of the mount is authoritative.  There may be delays before updates made in a container are are visible on the host.</li>
+          </ul>
+       </p>
+      </td>
+    </tr>
   </table>
-
 
   #### Bind Propagation
 
@@ -636,6 +674,77 @@ examples: |-
     redis:3.0.6
   ```
 
+  ### Specify service placement preferences (--placement-pref)
+
+  You can set up the service to divide tasks evenly over different categories of
+  nodes. One example of where this can be useful is to balance tasks over a set
+  of datacenters or availability zones. The example below illustrates this:
+
+  ```bash
+  $ docker service create \
+    --replicas 9 \
+    --name redis_2 \
+    --placement-pref 'spread=node.labels.datacenter' \
+    redis:3.0.6
+  ```
+
+  This uses `--placement-pref` with a `spread` strategy (currently the only
+  supported strategy) to spread tasks evenly over the values of the `datacenter`
+  node label. In this example, we assume that every node has a `datacenter` node
+  label attached to it. If there are three different values of this label among
+  nodes in the swarm, one third of the tasks will be placed on the nodes
+  associated with each value. This is true even if there are more nodes with one
+  value than another. For example, consider the following set of nodes:
+
+  - Three nodes with `node.labels.datacenter=east`
+  - Two nodes with `node.labels.datacenter=south`
+  - One node with `node.labels.datacenter=west`
+
+  Since we are spreading over the values of the `datacenter` label and the
+  service has 9 replicas, 3 replicas will end up in each datacenter. There are
+  three nodes associated with the value `east`, so each one will get one of the
+  three replicas reserved for this value. There are two nodes with the value
+  `south`, and the three replicas for this value will be divided between them,
+  with one receiving two replicas and another receiving just one. Finally, `west`
+  has a single node that will get all three replicas reserved for `west`.
+
+  If the nodes in one category (for example, those with
+  `node.labels.datacenter=south`) can't handle their fair share of tasks due to
+  constraints or resource limitations, the extra tasks will be assigned to other
+  nodes instead, if possible.
+
+  Both engine labels and node labels are supported by placement preferences. The
+  example above uses a node label, because the label is referenced with
+  `node.labels.datacenter`. To spread over the values of an engine label, use
+  `--placement-pref spread=engine.labels.<labelname>`.
+
+  It is possible to add multiple placement preferences to a service. This
+  establishes a hierarchy of preferences, so that tasks are first divided over
+  one category, and then further divided over additional categories. One example
+  of where this may be useful is dividing tasks fairly between datacenters, and
+  then splitting the tasks within each datacenter over a choice of racks. To add
+  multiple placement preferences, specify the `--placement-pref` flag multiple
+  times. The order is significant, and the placement preferences will be applied
+  in the order given when making scheduling decisions.
+
+  The following example sets up a service with multiple placement preferences.
+  Tasks are spread first over the various datacenters, and then over racks
+  (as indicated by the respective labels):
+
+  ```bash
+  $ docker service create \
+    --replicas 9 \
+    --name redis_2 \
+    --placement-pref 'spread=node.labels.datacenter' \
+    --placement-pref 'spread=node.labels.rack' \
+    redis:3.0.6
+  ```
+
+  When updating a service with `docker service update`, `--placement-pref-add`
+  appends a new placement preference after all existing placement preferences.
+  `--placement-pref-rm` removes an existing placement preference that matches the
+  argument.
+
   ### Attach a service to an existing network (--network)
 
   You can use overlay networks to connect one or more services within the swarm.
@@ -789,5 +898,6 @@ examples: |-
   $ docker inspect --format="{{.Config.Hostname}}" hosttempl.1.wo41w8hg8qanxwjwsg4kxpprj
 
   x3ti0erg11rjpg64m75kej2mz-hosttempl
+  {% endraw %}
   ```
 
