--- a/_data/engine-cli-edge/docker_service_ls.yaml
+++ b/_data/engine-cli-edge/docker_service_ls.yaml
@@ -11,6 +11,8 @@ options:
 - option: filter
   shorthand: f
   description: Filter output based on conditions provided
+- option: format
+  description: Pretty-print services using a Go template
 - option: quiet
   shorthand: q
   default_value: "false"
@@ -89,5 +91,34 @@ examples: |-
   0bcjwfh8ychr  redis  replicated  1/1       redis:3.0.6
   ```
 
-  <<<<<<< HEAD
+  ### Formatting
+
+  The formatting options (`--format`) pretty-prints services output
+  using a Go template.
+
+  Valid placeholders for the Go template are listed below:
+
+  Placeholder | Description
+  ------------|------------------------------------------------------------------------------------------
+  `.ID`       | Service ID
+  `.Name`     | Service name
+  `.Mode`     | Service mode (replicated, global)
+  `.Replicas` | Service replicas
+  `.Image`    | Service image
+
+  When using the `--format` option, the `service ls` command will either
+  output the data exactly as the template declares or, when using the
+  `table` directive, includes column headers as well.
+
+  The following example uses a template without headers and outputs the
+  `ID`, `Mode`, and `Replicas` entries separated by a colon for all services:
+
+  ```bash
+  {% raw %}
+  $ docker service ls --format "{{.ID}}: {{.Mode}} {{.Replicas}}"
+
+  0zmvwuiu3vue: replicated 10/10
+  fm6uf97exkul: global 5/5
+  {% endraw %}
+  ```
 
