--- a/_data/engine-cli-edge/docker_build.yaml
+++ b/_data/engine-cli-edge/docker_build.yaml
@@ -103,6 +103,9 @@ usage: docker build [OPTIONS] PATH | URL | -
 pname: docker
 plink: docker.yaml
 options:
+- option: add-host
+  default_value: '[]'
+  description: Add a custom host-to-IP mapping (host:ip)
 - option: build-arg
   default_value: '[]'
   description: Set build-time variables
@@ -144,8 +147,10 @@ options:
   description: Set metadata for an image
 - option: memory
   shorthand: m
+  default_value: "0"
   description: Memory limit
 - option: memory-swap
+  default_value: "0"
   description: |
     Swap limit equal to memory plus swap: '-1' to enable unlimited swap
 - option: network
@@ -169,7 +174,8 @@ options:
   default_value: '[]'
   description: Security options
 - option: shm-size
-  description: Size of /dev/shm, default value is 64MB
+  default_value: "0"
+  description: Size of /dev/shm
 - option: squash
   default_value: "false"
   description: Squash newly built layers into a single new layer
@@ -255,7 +261,7 @@ examples: |-
   This sends the URL `http://server/ctx.tar.gz` to the Docker daemon, which
   downloads and extracts the referenced tarball. The `-f ctx/Dockerfile`
   parameter specifies a path inside `ctx.tar.gz` to the `Dockerfile` that is used
-  to build the image. Any `ADD` commands in that `Dockerfile` that refer to local
+  to build the image. Any `ADD` commands in that `Dockerfile` that refers to local
   paths must be relative to the root of the contents inside `ctx.tar.gz`. In the
   example above, the tarball contains a directory `ctx/`, so the `ADD
   ctx/container.cfg /` operation works as expected.
@@ -426,12 +432,19 @@ examples: |-
 
   Specifying the `--isolation` flag without a value is the same as setting `--isolation="default"`.
 
+  ### Add entries to container hosts file (--add-host)
+
+  You can add other hosts into a container's `/etc/hosts` file by using one or
+  more `--add-host` flags. This example adds a static address for a host named
+  `docker`:
+
+      $ docker build --add-host=docker:10.180.0.1 .
 
   ### Squash an image's layers (--squash) **Experimental Only**
 
   Once the image is built, squash the new layers into a new image with a single
   new layer. Squashing does not destroy any existing image, rather it creates a new
-  image with the content of the squshed layers. This effectively makes it look
+  image with the content of the squashed layers. This effectively makes it look
   like all `Dockerfile` commands were created with a single layer. The build
   cache is preserved with this method.
 
