--- a/_data/engine-cli-edge/docker_create.yaml
+++ b/_data/engine-cli-edge/docker_create.yaml
@@ -74,6 +74,9 @@ options:
 - option: device
   default_value: '[]'
   description: Add a host device to the container
+- option: device-cgroup-rule
+  default_value: '[]'
+  description: Add a rule to the cgroup allowed devices list
 - option: device-read-bps
   default_value: '[]'
   description: Limit read rate (bytes per second) from a device
@@ -145,20 +148,22 @@ options:
   default_value: "false"
   description: Keep STDIN open even if not attached
 - option: io-maxbandwidth
+  default_value: "0"
   description: |
     Maximum IO bandwidth limit for the system drive (Windows only)
 - option: io-maxiops
   default_value: "0"
   description: Maximum IOps limit for the system drive (Windows only)
 - option: ip
-  description: Container IPv4 address (e.g. 172.30.100.104)
+  description: IPv4 address (e.g., 172.30.100.104)
 - option: ip6
-  description: Container IPv6 address (e.g. 2001:db8::33)
+  description: IPv6 address (e.g., 2001:db8::33)
 - option: ipc
   description: IPC namespace to use
 - option: isolation
   description: Container isolation technology
 - option: kernel-memory
+  default_value: "0"
   description: Kernel memory limit
 - option: label
   shorthand: l
@@ -179,13 +184,16 @@ options:
   default_value: '[]'
   description: Log driver options
 - option: mac-address
-  description: Container MAC address (e.g. 92:d0:c6:0a:29:33)
+  description: Container MAC address (e.g., 92:d0:c6:0a:29:33)
 - option: memory
   shorthand: m
+  default_value: "0"
   description: Memory limit
 - option: memory-reservation
+  default_value: "0"
   description: Memory soft limit
 - option: memory-swap
+  default_value: "0"
   description: |
     Swap limit equal to memory plus swap: '-1' to enable unlimited swap
 - option: memory-swappiness
@@ -245,10 +253,11 @@ options:
   default_value: '[]'
   description: Security Options
 - option: shm-size
-  description: Size of /dev/shm, default value is 64MB
+  default_value: "0"
+  description: Size of /dev/shm
 - option: stop-signal
   default_value: SIGTERM
-  description: Signal to stop a container, SIGTERM by default
+  description: Signal to stop a container
 - option: stop-timeout
   default_value: "0"
   description: Timeout (in seconds) to stop a container
@@ -372,4 +381,27 @@ examples: |-
   | `hyperv`   | Hyper-V hypervisor partition-based isolation.                                                                                                                  |
 
   Specifying the `--isolation` flag without a value is the same as setting `--isolation="default"`.
+
+  ### Dealing with dynamically created devices (--device-cgroup-rule)
+
+  Devices available to a container are assigned at creation time. The
+  assigned devices will both be added to the cgroup.allow file and
+  created into the container once it is run. This poses a problem when
+  a new device needs to be added to running container.
+
+  One of the solution is to add a more permissive rule to a container
+  allowing it access to a wider range of devices. For example, supposing
+  our container needs access to a character device with major `42` and
+  any number of minor number (added as new devices appear), the
+  following rule would be added:
+
+  ```
+  docker create --device-cgroup-rule='c 42:* rmw' -name my-container my-image
+  ```
+
+  Then, a user could ask `udev` to execute a script that would `docker exec my-container mknod newDevX c 42 <minor>`
+  the required device when it is added.
+
+  NOTE: initially present devices still need to be explicitely added to
+  the create/run command
 
