--- a/_data/engine-cli-edge/docker_image_build.yaml
+++ b/_data/engine-cli-edge/docker_image_build.yaml
@@ -5,6 +5,9 @@ usage: docker image build [OPTIONS] PATH | URL | -
 pname: docker image
 plink: docker_image.yaml
 options:
+- option: add-host
+  default_value: '[]'
+  description: Add a custom host-to-IP mapping (host:ip)
 - option: build-arg
   default_value: '[]'
   description: Set build-time variables
@@ -46,8 +49,10 @@ options:
   description: Set metadata for an image
 - option: memory
   shorthand: m
+  default_value: "0"
   description: Memory limit
 - option: memory-swap
+  default_value: "0"
   description: |
     Swap limit equal to memory plus swap: '-1' to enable unlimited swap
 - option: network
@@ -71,7 +76,8 @@ options:
   default_value: '[]'
   description: Security options
 - option: shm-size
-  description: Size of /dev/shm, default value is 64MB
+  default_value: "0"
+  description: Size of /dev/shm
 - option: squash
   default_value: "false"
   description: Squash newly built layers into a single new layer
