--- a/_data/engine-cli-edge/docker_image_prune.yaml
+++ b/_data/engine-cli-edge/docker_image_prune.yaml
@@ -10,6 +10,8 @@ options:
   shorthand: a
   default_value: "false"
   description: Remove all unused images, not just dangling ones
+- option: filter
+  description: Provide filter values (e.g. 'until=<timestamp>')
 - option: force
   shorthand: f
   default_value: "false"
@@ -74,6 +76,7 @@ examples: |2-
   The following removes images created before `2017-01-04T00:00:00`:
 
   ```bash
+  {% raw %}
   $ docker images --format 'table {{.Repository}}\t{{.Tag}}\t{{.ID}}\t{{.CreatedAt}}\t{{.Size}}'
   REPOSITORY          TAG                 IMAGE ID            CREATED AT                      SIZE
   foo                 latest              2f287ac753da        2017-01-04 13:42:23 -0800 PST   3.98 MB
@@ -96,6 +99,7 @@ examples: |2-
 
   REPOSITORY          TAG                 IMAGE ID            CREATED AT                      SIZE
   foo                 latest              2f287ac753da        2017-01-04 13:42:23 -0800 PST   3.98 MB
+  {% endraw %}
   ```
 
   The following removes images created more than 10 days (`240h`) ago:
