--- a/_data/engine-cli-edge/docker_network_ls.yaml
+++ b/_data/engine-cli-edge/docker_network_ls.yaml
@@ -78,16 +78,16 @@ examples: "### List all networks\n\n```bash\n$ sudo docker network ls\nNETWORK I
   type=custom -q`\n```\n\nA warning will be issued when trying to remove a network
   that has containers\nattached.\n\n### Formatting\n\nThe formatting options (`--format`)
   pretty-prints networks output\nusing a Go template.\n\nValid placeholders for the
-  Go template are listed below:\n\nPlaceholder | Description\n------------|------------------------------------------------------------------------------------------\n`.ID`
-  \      | Network ID\n`.Name`     | Network name\n`.Driver`   | Network driver\n`.Scope`
-  \   | Network scope (local, global)\n`.IPv6`     | Whether IPv6 is enabled on the
-  network or not.\n`.Internal` | Whether the network is internal or not.\n`.Labels`
-  \  | All labels assigned to the network.\n`.Label`    | Value of a specific label
-  for this network. For example `{{.Label \"project.version\"}}`\n\nWhen using the
-  `--format` option, the `network ls` command will either\noutput the data exactly
-  as the template declares or, when using the\n`table` directive, includes column
-  headers as well.\n\nThe following example uses a template without headers and outputs
-  the\n`ID` and `Driver` entries separated by a colon for all networks:\n\n```bash\n$
-  docker network ls --format \"{{.ID}}: {{.Driver}}\"\nafaaab448eb2: bridge\nd1584f8dc718:
-  host\n391df270dc66: null\n```"
+  Go template are listed below:\n\nPlaceholder  | Description\n-------------|------------------------------------------------------------------------------------------\n`.ID`
+  \       | Network ID\n`.Name`      | Network name\n`.Driver`    | Network driver\n`.Scope`
+  \    | Network scope (local, global)\n`.IPv6`      | Whether IPv6 is enabled on
+  the network or not.\n`.Internal`  | Whether the network is internal or not.\n`.Labels`
+  \   | All labels assigned to the network.\n`.Label`     | Value of a specific label
+  for this network. For example `{{.Label \"project.version\"}}`\n`.CreatedAt` | Time
+  when the network was created\n\nWhen using the `--format` option, the `network ls`
+  command will either\noutput the data exactly as the template declares or, when using
+  the\n`table` directive, includes column headers as well.\n\nThe following example
+  uses a template without headers and outputs the\n`ID` and `Driver` entries separated
+  by a colon for all networks:\n\n```bash\n$ docker network ls --format \"{{.ID}}:
+  {{.Driver}}\"\nafaaab448eb2: bridge\nd1584f8dc718: host\n391df270dc66: null\n```"
 
