--- a/_data/engine-cli-edge/docker_network_prune.yaml
+++ b/_data/engine-cli-edge/docker_network_prune.yaml
@@ -7,6 +7,8 @@ usage: docker network prune [OPTIONS]
 pname: docker network
 plink: docker_network.yaml
 options:
+- option: filter
+  description: Provide filter values (e.g. 'until=<timestamp>')
 - option: force
   shorthand: f
   default_value: "false"
