--- a/_data/engine-cli-edge/docker_plugin_push.yaml
+++ b/_data/engine-cli-edge/docker_plugin_push.yaml
@@ -12,7 +12,7 @@ plink: docker_plugin.yaml
 options:
 - option: disable-content-trust
   default_value: "true"
-  description: Skip image verification
+  description: Skip image signing
 examples: |-
   The following example shows how to push a sample `user/plugin`.
 
