--- a/_data/engine-cli-edge/docker_plugin_set.yaml
+++ b/_data/engine-cli-edge/docker_plugin_set.yaml
@@ -18,6 +18,7 @@ examples: |-
   `sample-volume-plugin` plugin.
 
   ```bash
+  {% raw %}
   $ docker plugin inspect -f {{.Settings.Env}} tiborvass/sample-volume-plugin
 
   [DEBUG=0]
@@ -26,6 +27,7 @@ examples: |-
 
   $ docker plugin inspect -f {{.Settings.Env}} tiborvass/sample-volume-plugin
   [DEBUG=1]
+  {% endraw %}
   ```
 
   ### Change the source of a mount
@@ -34,6 +36,7 @@ examples: |-
   the `myplugin` plugin.
 
   ```bash
+  {% raw %}
   $ docker plugin inspect -f '{{with $mount := index .Settings.Mounts 0}}{{$mount.Source}}{{end}}' myplugin
   /foo
 
@@ -41,6 +44,7 @@ examples: |-
 
   $ docker plugin inspect -f '{{with $mount := index .Settings.Mounts 0}}{{$mount.Source}}{{end}}' myplugin
   /bar
+  {% endraw %}
   ```
 
   > **Note**: Since only `source` is settable in `mymount`,
@@ -52,6 +56,7 @@ examples: |-
   the `myplugin` plugin.
 
   ```bash
+  {% raw %}
   $ docker plugin inspect -f '{{with $device := index .Settings.Devices 0}}{{$device.Path}}{{end}}' myplugin
   /dev/foo
 
@@ -59,6 +64,7 @@ examples: |-
 
   $ docker plugin inspect -f '{{with $device := index .Settings.Devices 0}}{{$device.Path}}{{end}}' myplugin
   /dev/bar
+  {% endraw %}
   ```
 
   > **Note**: Since only `path` is settable in `mydevice`,
@@ -69,6 +75,7 @@ examples: |-
   The following example change the source of the args on the `myplugin` plugin.
 
   ```bash
+  {% raw %}
   $ docker plugin inspect -f '{{.Settings.Args}}' myplugin
   ["foo", "bar"]
 
@@ -76,5 +83,6 @@ examples: |-
 
   $ docker plugin inspect -f '{{.Settings.Args}}' myplugin
   ["foo", "bar", "baz"]
+  {% endraw %}
   ```
 
