--- a/_data/engine-cli-edge/docker_push.yaml
+++ b/_data/engine-cli-edge/docker_push.yaml
@@ -18,7 +18,7 @@ plink: docker.yaml
 options:
 - option: disable-content-trust
   default_value: "true"
-  description: Skip image verification
+  description: Skip image signing
 examples: |-
   ### Push a new image to a registry
 
