--- a/_data/engine-cli-edge/docker_service_ps.yaml
+++ b/_data/engine-cli-edge/docker_service_ps.yaml
@@ -1,15 +1,17 @@
 command: docker service ps
-short: List the tasks of a service
+short: List the tasks of one or more services
 long: |-
   Lists the tasks that are running as part of the specified services. This command
   has to be run targeting a manager node.
-usage: docker service ps [OPTIONS] SERVICE
+usage: docker service ps [OPTIONS] SERVICE [SERVICE...]
 pname: docker service
 plink: docker_service.yaml
 options:
 - option: filter
   shorthand: f
   description: Filter output based on conditions provided
+- option: format
+  description: Pretty-print tasks using a Go template
 - option: no-resolve
   default_value: "false"
   description: Do not map IDs to Names
@@ -131,8 +133,39 @@ examples: |-
   8eaxrb2fqpbn  redis.10  redis:3.0.6  manager1  Running        Running 8 seconds
   ```
 
-
   #### desired-state
 
-  The `desired-state` filter can take the values `running`, `shutdown`, and `accepted`.
+  The `desired-state` filter can take the values `running`, `shutdown`, or `accepted`.
+
+  ### Formatting
+
+  The formatting options (`--format`) pretty-prints tasks output
+  using a Go template.
+
+  Valid placeholders for the Go template are listed below:
+
+  Placeholder     | Description
+  ----------------|------------------------------------------------------------------------------------------
+  `.ID`           | Task ID
+  `.Name`         | Task name
+  `.Image`        | Task image
+  `.Node`         | Node ID
+  `.DesiredState` | Desired state of the task (`running`, `shutdown`, or `accepted`)
+  `.CurrentState` | Current state of the task
+  `.Error`        | Error
+  `.Ports`        | Task published ports
+
+  When using the `--format` option, the `service ps` command will either
+  output the data exactly as the template declares or, when using the
+  `table` directive, includes column headers as well.
+
+  The following example uses a template without headers and outputs the
+  `Name` and `Image` entries separated by a colon for all tasks:
+
+  ```bash
+  $ docker service ps --format "{{.Name}}: {{.Image}}" top
+  top.1: busybox
+  top.2: busybox
+  top.3: busybox
+  ```
 
