--- a/_data/engine-cli-edge/docker_stack_services.yaml
+++ b/_data/engine-cli-edge/docker_stack_services.yaml
@@ -10,6 +10,8 @@ options:
 - option: filter
   shorthand: f
   description: Filter output based on conditions provided
+- option: format
+  description: Pretty-print services using a Go template
 - option: quiet
   shorthand: q
   default_value: "false"
@@ -70,9 +72,11 @@ examples: |-
   `ID`, `Mode`, and `Replicas` entries separated by a colon for all services:
 
   ```bash
+  {% raw %}
   $ docker stack services --format "{{.ID}}: {{.Mode}} {{.Replicas}}"
 
   0zmvwuiu3vue: replicated 10/10
   fm6uf97exkul: global 5/5
+  {% endraw %}
   ```
 
