--- a/_data/engine-cli-edge/docker_system_prune.yaml
+++ b/_data/engine-cli-edge/docker_system_prune.yaml
@@ -10,6 +10,8 @@ options:
   shorthand: a
   default_value: "false"
   description: Remove all unused images not just dangling ones
+- option: filter
+  description: Provide filter values (e.g. 'until=<timestamp>')
 - option: force
   shorthand: f
   default_value: "false"
