--- a/_data/engine-cli-edge/docker_volume_ls.yaml
+++ b/_data/engine-cli-edge/docker_volume_ls.yaml
@@ -63,9 +63,9 @@ examples: |-
 
   #### driver
 
-  The `driver` filter matches on all or part of a volume's driver name.
+  The `driver` filter matches volumes based on their driver.
 
-  The following filter matches all volumes with a driver name containing the `local` string.
+  The following example matches volumes that are created with the `local` driver:
 
   ```bash
   $ docker volume ls -f driver=local
@@ -160,10 +160,12 @@ examples: |-
   `Name` and `Driver` entries separated by a colon for all volumes:
 
   ```bash
+  {% raw %}
   $ docker volume ls --format "{{.Name}}: {{.Driver}}"
 
   vol1: local
   vol2: local
   vol3: local
+  {% endraw %}
   ```
 
